[gd_scene load_steps=2 format=3 uid="uid://j22g6poux24o"]

[ext_resource type="Script" uid="uid://cl1ya1vm63xdc" path="res://header.gd" id="1_866fw"]

[node name="Header" type="HBoxContainer"]
script = ExtResource("1_866fw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SideMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "?
"

[node name="HeaderLabel1" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="HeaderLabel2" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
